--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "William Gravina",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.16.0",
@@ -13,7 +14,9 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^26.6.3",
     "prettier": "^2.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.8"
