--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 NODE_ENV=dev
 API_PORT=3000
+
+# Default database typeorm
+DEFAULT_HOST=localhost
+DEFAULT_TYPE=postgres
+DEFAULT_PORT=5432
+DEFAULT_USERNAME=dev
+DEFAULT_PASSWORD=dev
+DEFAULT_DB_NAME=dev_process_med
