--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "typescript": "^3.9.8"
   },
   "dependencies": {
-    "dotenv": "^9.0.2"
+    "dotenv": "^9.0.2",
+    "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32",
+    "typeorm-encrypted": "^0.5.6",
+    "typeorm-naming-strategies": "^2.0.0"
   }
 }
