--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "William Gravina",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -25,6 +26,8 @@
   },
   "dependencies": {
     "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
