--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^3.9.8"
   },
   "dependencies": {
+    "celebrate": "^14.0.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
