--- a/package.json
+++ b/package.json
@@ -4,6 +4,21 @@
   "main": "index.js",
   "author": "William Gravina",
   "license": "MIT",
+  "scripts": {
+    "dev": "yarn up && yarn dev:server",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "down": "docker-compose down",
+    "prod:up": "yarn up && yarn build && node_modules/.bin/typeorm migration:run && yarn start",
+    "start": "node dist/shared/infra/http/server.js",
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:ci": "yarn test --coverage",
+    "test:coveralls": "yarn test:ci && coveralls < coverage/lcov.info",
+    "test:staged": "yarn test --findRelatedTests",
+    "test:unit": "yarn test --watch -c jest-unit-config.js",
+    "test:verbose": "jest --detectOpenHandles --passWithNoTests --runInBand",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "up": "docker-compose up -d"
+  },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
