refactor: added env for encryption database

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ DEFAULT_PORT=5432
 DEFAULT_USERNAME=dev
 DEFAULT_PASSWORD=dev
 DEFAULT_DB_NAME=dev_process_med
+
+# Encryption database
+TYPEORM_KEY_ENCRYPT=
+TYPEORM_IV_ENCRYPT=
