chore: added timezone in the postgres configuration of the docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       POSTGRESQL_PASSWORD: ${DEFAULT_PASSWORD}
       POSTGRESQL_USERNAME: ${DEFAULT_USERNAME}
       POSTGRESQL_DATABASE: ${DEFAULT_DB_NAME}
+      POSTGRESQL_TIMEZONE: America/SAO_PAULO
     ports:
       - "${DEFAULT_PORT}:5432"
     restart: unless-stopped
