chore: added library cep promise

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "celebrate": "^14.0.0",
+    "cep-promise": "^4.1.0",
     "class-transformer": "^0.4.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
