--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "William Gravina",
   "license": "MIT",
   "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "yarn up && yarn dev:server",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "down": "docker-compose down",
-    "prod:up": "yarn up && yarn build && node_modules/.bin/typeorm migration:run && yarn start",
+    "prod:typeorm": "node_modules/.bin/typeorm migration:run",
     "start": "node dist/shared/infra/http/server.js",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:ci": "yarn test --coverage",
@@ -20,11 +21,20 @@
     "up": "docker-compose up -d"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
